# jakmt

./: .gitignore  CMakeLists.txt  README  README.md
doc/: log-performance-aws-ec2-c5.24xlarge.txt  log-performance-aws-ec2-c5.xlarge.txt  log-performance-aws-ec2-m5.2xlarge.txt  log-performance-aws-ec2-m5.xlarge.txt  log-performance-mac-laptop.txt
experiments/: SphereIntersection.m  intersectSweptSpheres.m
jakmt/: jakmt.sln  jakmt.vcxproj  jakmt.vcxproj.filters
src/include/: intersect.hpp  vector3.hpp
src/jakmt/: main.c  main.cpp
